# Diafer

app-agenda/: README.md  index.html  main.js  manifest.json  package.json  service-worker.js  vite.config.ts
app-agenda/src/: App.tsx
app-agenda/src-tauri/: Cargo.toml  tauri.conf.json
app-agenda/src-tauri/src/: main.rs
