[package]
name = "app-agenda"
version = "0.1.0"
description = "Aplicativo de Agenda para Desktop"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 